import bootstrap grid system.

--- a/transfer.html
+++ b/transfer.html
@@ -57,24 +57,22 @@
   </div>
 
   <div class="row">
-    <h3 class="col-left"><span class="ft24">债权转让列表</span></h3>
-    <div class="col-right">
-     
-      <div class="clear-col">
-        <dl class="fn-left w170 text-center">
+    <h3 class="col-xs-4"><span class="ft24">债权转让列表</span></h3>
+    <div class="col-xs-8">
+      <div class="row">
+        <div class="col-xs-4">
           <dt>累计成交总金额</dt>
           <dd class="num"><em class="value mr10">66894.04</em>万元</dd>
-        </dl>
-        <dl class="fn-left w170 border-lt text-center">
+        </div>
+        <div class="col-xs-4">
           <dt>累计转让总笔数</dt>
           <dd class="num"><em class="value mr10">895768</em>笔</dd>
-        </dl>
-        <dl class="fn-left w170 border-lt text-center">
+        </div>
+        <div class="col-xs-4">
           <dt>单笔转让平均耗时</dt>
           <dd class="num"><em class="value mr10">7分43秒</em></dd>
-        </dl>
+        </div>
       </div>
-      
     </div>
   </div>
 
