--- a/transfer.html
+++ b/transfer.html
@@ -56,21 +56,21 @@
     <div class="clear-col"></div>
   </div>
 
-  <div class="row">
-    <h3 class="col-xs-4"><span class="ft24">债权转让列表</span></h3>
+  <div class="row mt20 text-center">
+    <h3 class="col-xs-4 text-left"><span class="ft24">债权转让列表</span></h3>
     <div class="col-xs-8">
       <div class="row">
-        <div class="col-xs-4">
+        <div class="col-xs-4 col-border">
           <dt>累计成交总金额</dt>
-          <dd class="num"><em class="value mr10">66894.04</em>万元</dd>
+          <dd class="ft18"><span class="value mr10">66894.04</span>万元</dd>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-4 col-border">
           <dt>累计转让总笔数</dt>
-          <dd class="num"><em class="value mr10">895768</em>笔</dd>
+          <dd class="ft18"><span class="value mr10">895768</span>笔</dd>
         </div>
         <div class="col-xs-4">
           <dt>单笔转让平均耗时</dt>
-          <dd class="num"><em class="value mr10">7分43秒</em></dd>
+          <dd class="ft18"><span class="value mr10">7分43秒</span></dd>
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
 
   <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
   <tr>
-    <th class="tal" scope="col" width="20%">借款标题</th>
+    <th scope="col" width="20%">借款标题</th>
     <th scope="col">信用等级</th>
     <th scope="col">年利率</th>
     <th scope="col">剩余期限</th>
@@ -88,43 +88,37 @@
     <th scope="col">转出价格</th>
     <th scope="col"></th>
   </tr>
-  <tr>
-    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
-    <td><span class="y-rate">9.5</span>%</td>
-    <td>100万</td>
-    <td>60%</td>
-    <td>6个月</td>
-    <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
-    <td><a class="tzbtn">投标</a></td>
-    <td><a class="tzbtn">投标</a></td>
-  </tr>
-  <tr>
-    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
-    <td><span class="y-rate">9.5</span>%</td>
-    <td>100万</td>
-    <td>60%</td>
-    <td>6个月</td>
-    <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
-  </tr>
-  <tr>
-    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
-    <td><span class="y-rate">99.5</span>%</td>
-    <td>100万</td>
-    <td>60%</td>
-    <td>6个月</td>
-    <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn">投标</a></td>
-  </tr>
-  <tr>
-    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
-    <td><span class="y-rate">99.5</span>%</td>
-    <td>100万</td>
-    <td>100%</td>
-    <td>6个月</td>
-    <td>四川创业融资担保有限公司</td>
-    <td><a class="tzbtn tzbtn2">详情</a></td>
+
+  <tr class="ft12">
+    <td scope="col" width="20%">借款标题</td>
+    <td scope="col"><span class="rank">A</span></td>
+    <td scope="col"><span class="ft18">11.00</span>%</td>
+    <td scope="col"><span class="ft18">15</span>个月</td>
+    <td scope="col"><span class="ft18">42.24</span>元</td>
+    <td scope="col"><span class="ft18">1</span>份</td>
+    <td scope="col"><span class="ft18">100</span>%</td>
+    <td scope="col"><span class="ft18">42.24</span>元/份</td>
+    <td scope="col"><a class="tzbtn">购买</a></td>
+  </tr><tr class="ft12">
+    <td scope="col" width="20%">借款标题</td>
+    <td scope="col"><span class="rank">A</span></td>
+    <td scope="col"><span class="ft18">11.00</span>%</td>
+    <td scope="col"><span class="ft18">15</span>个月</td>
+    <td scope="col"><span class="ft18">42.24</span>元</td>
+    <td scope="col"><span class="ft18">1</span>份</td>
+    <td scope="col"><span class="ft18">100</span>%</td>
+    <td scope="col"><span class="ft18">42.24</span>元/份</td>
+    <td scope="col"><a class="tzbtn">购买</a></td>
+  </tr><tr class="ft12">
+    <td scope="col" width="20%">借款标题</td>
+    <td scope="col"><span class="rank">A</span></td>
+    <td scope="col"><span class="ft18">11.00</span>%</td>
+    <td scope="col"><span class="ft18">15</span>个月</td>
+    <td scope="col"><span class="ft18">42.24</span>元</td>
+    <td scope="col"><span class="ft18">1</span>份</td>
+    <td scope="col"><span class="ft18">100</span>%</td>
+    <td scope="col"><span class="ft18">42.24</span>元/份</td>
+    <td scope="col"><a class="tzbtn">购买</a></td>
   </tr>
 </table>
   
