--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
     <td><span class="y-rate">9.5</span>%</td>
     <td>100万</td>
-    <td>60%</td>
+    <td><strong class="ui-progressbar-mid ui-progressbar-mid-13"><em>13</em>%</strong></td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
     <td><a class="tzbtn">投标</a></td>
@@ -95,7 +95,7 @@
     <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
     <td><span class="y-rate">9.5</span>%</td>
     <td>100万</td>
-    <td>60%</td>
+    <td><strong class="ui-progressbar-mid ui-progressbar-mid-55"><em>55</em>%</strong></td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
     <td><a class="tzbtn">投标</a></td>
@@ -104,7 +104,7 @@
     <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
     <td><span class="y-rate">99.5</span>%</td>
     <td>100万</td>
-    <td>60%</td>
+    <td><strong class="ui-progressbar-mid ui-progressbar-mid-88"><em>88</em>%</strong></td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
     <td><a class="tzbtn">投标</a></td>
@@ -113,7 +113,7 @@
     <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
     <td><span class="y-rate">99.5</span>%</td>
     <td>100万</td>
-    <td>100%</td>
+    <td><strong class="ui-progressbar-mid ui-progressbar-mid-100"><em>100</em>%</strong></td>
     <td>6个月</td>
     <td>四川创业融资担保有限公司</td>
     <td><a class="tzbtn tzbtn2">已满标</a></td>
