--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 <body>
 
 <div class="top">
-<div class="w1000 mc">
-  <!--<div class="fl">欢迎使用川商贷！</div>-->
-  <div class="fr topr"><a href="enter.html" class="topbtn">登录</a><a href="login-select.html" class="topbtn">注册</a><!--<a href="#">帮助中心</a>--></div>
+<div class="w1100 mc">
+  <div class="fl">欢迎使用金仓贷！</div>
+  <div class="fr topr"><a href="account/login.html" class="topbtn">登录</a><a href="account/register.html.html" class="topbtn">注册</a><a href="help/help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1100 mc">
   <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <div class="nav"><a href="index.html" class="c900">首页</a><a href="loan.html">我要借款</a><a href="invest.html">我要投资</a><a href="account.html">账户管理</a><a href="help.html">安全保障</a><a href="us.html">关于我们</a></div>
+  <div class="nav"><a href="index.html" class="c900">首页</a><a href="loan/loan.html">我要借款</a><a href="invest/invest.html">我要投资</a><a href="account/account.html">账户管理</a><a href="security/security.html">安全保障</a><a href="about/company-intro.html">关于我们</a></div>
 </div>
 </div>
 
