--- a/invest/transfer.html
+++ b/invest/transfer.html
@@ -30,7 +30,7 @@
 <div class="header">
 <div class="w1100 mc">
   <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
-  <div class="nav"><a href="index.html">首页</a><a href="loan.html">我要借款</a><a href="invest.html" class="c900">我要投资</a><a href="account.html">账户管理</a><a href="help.html">新手引导</a><a href="us.html">关于我们</a></div>
+  <div class="nav"><a href="index.html">首页</a><a href="../loan/loan.html">我要借款</a><a href="../invest/invest.html" class="c900">我要投资</a><a href="../account/account.html">账户管理</a><a href="../security/security.html">安全保障</a><a href="../about/company-intro.html">关于我们</a></div>
 </div>
 </div>
 
