--- a/about/company-intro.html
+++ b/about/company-intro.html
@@ -30,7 +30,7 @@
 <div class="header">
 <div class="w1100 mc">
   <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
-  <div class="nav"><a href="index.html">首页</a><a href="invest.html">我要投资</a><a href="financing.html">我要融资</a><a href="account.html">账户管理</a><a href="help.html">安全保障</a><a href="us.html" class="c900">关于我们</a></div>
+  <div class="nav"><a href="index.html">首页</a><a href="../loan/loan.html">我要借款</a><a href="../invest/invest.html">我要投资</a><a href="../account/account.html">账户管理</a><a href="../security/security.html">安全保障</a><a href="../about/company-intro.html" class="c900">关于我们</a></div>
 </div>
 </div>
 
@@ -41,9 +41,9 @@
     <h2 class="mt20 pl20 borb2 lh48">关于我们</h2>
     <ul class="left_ul">
       <li><a href="company-intro.html" class="c900">公司介绍</a><i class="png"></i></li>
-      <li><a href="#">产品介绍</a></li>
-      <li><a href="#">企业资质</a></li>
-      <li><a href="#">联系我们</a></li>
+      <li><a href="product-intro.html">产品介绍</a></li>
+      <li><a href="qualification.html">企业资质</a></li>
+      <li><a href="contact-us.html">联系我们</a></li>
     </ul>
   </div> 
   
