--- a/about/qualification.html
+++ b/about/qualification.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
-<title>产品介绍-金仓贷</title>
+<title>企业资质-金仓贷</title>
 
 <link href="../css/public.css" type="text/css" rel="stylesheet" />
 <link href="../css/style.css" type="text/css" rel="stylesheet" />
@@ -35,30 +35,28 @@
 </div>
 
 
-<div class="con bor about-con clearfix">
+<div class="con about-con clearfix">
 
-  <div id="left">
+  <div id="left" class="bor">
     <h2 class="mt20 pl20 borb2 lh48">关于我们</h2>
     <ul class="left_ul">
       <li><a href="company-intro.html">公司介绍</a></li>
-      <li><a href="product-intro.html" class="c900">产品介绍</a><i class="png"></i></li>
-      <li><a href="qualification.html">企业资质</a></li>
+      <li><a href="product-intro.html">产品介绍</a></li>
+      <li><a href="qualification.html" class="c900">企业资质</a><i class="png"></i></li>
       <li><a href="contact-us.html">联系我们</a></li>
     </ul>
   </div> 
   
-  <div id="right">
+  <div id="right" class="bor">
   <div class="p40 pt20">
   
-    <h2 class="title"><span>产品介绍</span></h2>
+    <h2 class="title"><span>企业资质</span></h2>
     <div class="right_con mt20">
         
       <div>
-        <p>微商贷    针对中小商户短期融资需求，推出的5—20万信用贷款。</p>
-        <p>车宜贷    针对有短期小额需求的客户，推出机动车质押贷款，为客户提供便捷快速的融资需求。</p>
-        <p>兴业贷    金仓贷推出的企业贷款，着力为中小企业解决融资难，可为中小企业解决200万以下融资。</p>
-
-
+        <img src="../images/qualification-1.jpg">
+        <img src="../images/qualification-2.jpg">
+        <img src="../images/qualification-3.jpg">
       </div>
         
     </div>
