--- a/account/account.html
+++ b/account/account.html
@@ -30,7 +30,43 @@
 <div class="header">
 <div class="w1100 mc">
   <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
-  <div class="nav"><a href="index.html">首页</a><a href="../loan/loan.html">我要借款</a><a href="../invest/invest.html">我要投资</a><a href="../account/account.html" class="c900">账户管理</a><a href="../security/security.html">安全保障</a><a href="../about/company-intro.html">关于我们</a></div>
+  <ul class="nav">
+    <li>
+      <a href="index.html" class="c900">首页</a>
+    </li>
+    <li>
+      <a href="loan.html">我要借款</a>
+    </li>
+    <li class="sub">
+      <a href="#">我要投资</a>
+      <ul>
+        <li><a href="">我要投资</a></li>
+        <li><a href="">散标投资</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="account.html">账户管理</a>
+    </li>
+    <li class="sub">
+      <a href="#">安全保障</a>
+      <ul>
+        <li><a href="">资金安全保障</a></li>
+        <li><a href="">项目风险保障</a></li>
+        <li><a href="">项目担保保障</a></li>
+        <li><a href="">风险准备金垫付</a></li>
+        <li><a href="">违约赔付有保障</a></li>
+      </ul>
+    </li>
+    <li class="sub">
+      <a href="#">关于我们</a>
+      <ul>
+        <li><a href="">公司介绍</a></li>
+        <li><a href="">产品介绍</a></li>
+        <li><a href="">企业资质</a></li>
+        <li><a href="">联系我们</a></li>
+      </ul>
+    </li>
+  </ul>
 </div>
 </div>
 
