--- a/account/register.html
+++ b/account/register.html
@@ -66,7 +66,7 @@
   </tr>
    <tr>
     <td>&nbsp;</td>
-    <td><input name="" type="checkbox" class="checkbox" value="" checked="checked" />我同意<a href="#" class="c08c">《服务条款》</a>和<a href="#" class="c08c">《借入协议》</a></span>
+    <td><input name="" type="checkbox" class="checkbox" value="" checked="checked" />我同意<a href="#" class="c08c">《服务条款》</a>和<a href="#" class="c08c">《借入协议》</a>
     </td>
   </tr>
   <tr>
