--- a/index.html
+++ b/index.html
@@ -6,64 +6,57 @@
 <meta http-equiv="description" content="川商贷">
 <title>首页-金仓贷</title>
 
-<link href="css/public.css" type="text/css" rel="stylesheet" />
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+<link href="./css/public.css" type="text/css" rel="stylesheet" />
+<link href="./css/style.css" type="text/css" rel="stylesheet" />
 
 <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
+<script type="text/javascript" src="./js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="./js/base.js"></script>
 
 </head>
 
-<body>
+<body id="index-body">
 
 <div class="top">
 <div class="w1100 mc">
   <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><a href="account/login.html" class="topbtn">登录</a><a href="account/register.html.html" class="topbtn">注册</a><a href="help/help.html">帮助中心</a></div>
+  <div class="fr topr"><a href="./account/login.html" class="topbtn">登录</a><a href="./account/register.html.html" class="topbtn">注册</a><a href="./help/help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+  <a href="./index.html" class="logo"><img src="./images/logo.png" /></a>
   <ul class="nav">
     <li>
-      <a href="index.html" class="c900">首页</a>
+      <a href="./index.html" class="c900">首页</a>
     </li>
     <li>
-      <a href="loan.html">我要借款</a>
+      <a href="./loan/loan.html">我要借款</a>
     </li>
     <li class="sub">
       <a href="#">我要投资</a>
       <ul>
-        <li><a href="">我要投资</a></li>
-        <li><a href="">散标投资</a></li>
+        <li><a href="./invest/invest.html">散标投资</a></li>
+        <li><a href="./invest/transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
-      <a href="account.html">账户管理</a>
+      <a href="./account/account.html">账户管理</a>
     </li>
     <li class="sub">
-      <a href="#">安全保障</a>
-      <ul>
-        <li><a href="">资金安全保障</a></li>
-        <li><a href="">项目风险保障</a></li>
-        <li><a href="">项目担保保障</a></li>
-        <li><a href="">风险准备金垫付</a></li>
-        <li><a href="">违约赔付有保障</a></li>
-      </ul>
+      <a href="./security/security.html">安全保障</a>
     </li>
     <li class="sub">
       <a href="#">关于我们</a>
       <ul>
-        <li><a href="">公司介绍</a></li>
-        <li><a href="">产品介绍</a></li>
-        <li><a href="">企业资质</a></li>
-        <li><a href="">联系我们</a></li>
+        <li><a href="./about/company-intro.html">公司介绍</a></li>
+        <li><a href="./about/product-intro.html">产品介绍</a></li>
+        <li><a href="./about/qualification.html">企业资质</a></li>
+        <li><a href="./about/contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
@@ -78,7 +71,7 @@
       <div class="logsel"><label class="png label_2"></label><input type="text" value="登录密码" class="text" /></div>
       <div class="logsel"><label class="png label_3"></label><input type="text" value="验证码" class="text" style="width:80px;" /><img src="upload/yzm.jpg" class="yzm" /></div>
       <div class="mt20"><a class="png enbtn">登&nbsp;&nbsp;录</a></div>
-      <div class="mt5 white"><a href="#" class="zcmm mr10">注册账号</a>|<a href="#" class="zcmm ml10">忘记密码</a></div>
+      <div class="mt5 white"><a href="./account/register.html" class="zcmm mr10">注册账号</a>|<a href="#" class="zcmm ml10">忘记密码</a></div>
     </div>
   </div>  
   <!-- 图片切换代码 开始 -->
