--- a/invest/details.html
+++ b/invest/details.html
@@ -4,17 +4,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
-<title>川商贷</title>
+<title>项目详情-金仓贷</title>
 
-<link href="css/public.css" type="text/css" rel="stylesheet" />
-<link href="css/style.css" type="text/css" rel="stylesheet" />
+<link href="../css/public.css" type="text/css" rel="stylesheet" />
+<link href="../css/style.css" type="text/css" rel="stylesheet" />
 
 <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
+<script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="../js/base.js"></script>
 
 </head>
 
@@ -22,15 +22,51 @@
 
 <div class="top">
 <div class="w1000 mc">
-  <div class="fl">欢迎使用川商贷！</div>
-  <div class="fr topr"><a href="enter.html" class="topbtn">登录</a><a href="login.html" class="topbtn">注册</a><a href="#">帮助中心</a></div>
+  <div class="fl">欢迎使用金仓贷！</div>
+  <div class="fr topr"><a href="enter.html" class="topbtn">登录</a><a href="login.html" class="topbtn">注册</a><a href="..help/help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1000 mc">
   <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <div class="nav"><a href="index.html">首页</a><a href="invest.html" class="c900">我要投资</a><a href="financing.html">我要融资</a><a href="account.html">账户管理</a><a href="help.html">安全保障</a><a href="us.html">关于我们</a></div>
+  <ul class="nav">
+    <li>
+      <a href="index.html" class="c900">首页</a>
+    </li>
+    <li>
+      <a href="loan.html">我要借款</a>
+    </li>
+    <li class="sub">
+      <a href="#">我要投资</a>
+      <ul>
+        <li><a href="">我要投资</a></li>
+        <li><a href="">散标投资</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="account.html">账户管理</a>
+    </li>
+    <li class="sub">
+      <a href="#">安全保障</a>
+      <ul>
+        <li><a href="">资金安全保障</a></li>
+        <li><a href="">项目风险保障</a></li>
+        <li><a href="">项目担保保障</a></li>
+        <li><a href="">风险准备金垫付</a></li>
+        <li><a href="">违约赔付有保障</a></li>
+      </ul>
+    </li>
+    <li class="sub">
+      <a href="#">关于我们</a>
+      <ul>
+        <li><a href="">公司介绍</a></li>
+        <li><a href="">产品介绍</a></li>
+        <li><a href="">企业资质</a></li>
+        <li><a href="">联系我们</a></li>
+      </ul>
+    </li>
+  </ul>
 </div>
 </div>
 
