--- a/loan/loan.html
+++ b/loan/loan.html
@@ -30,7 +30,36 @@
 <div class="header">
 <div class="w1100 mc">
   <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
-  <div class="nav"><a href="index.html">首页</a><a href="../loan/loan.html" class="c900">我要借款</a><a href="../invest/invest.html">我要投资</a><a href="../account/account.html">账户管理</a><a href="../security/security.html">安全保障</a><a href="../about/company-intro.html">关于我们</a></div>
+  <ul class="nav">
+    <li>
+      <a href="../index.html">首页</a>
+    </li>
+    <li>
+      <a href="../loan/loan.html" class="c900">我要借款</a>
+    </li>
+    <li class="sub">
+      <a href="../invest/invest.html">我要投资</a>
+      <ul>
+        <li><a href="../invest/invest.html">散标投资</a></li>
+        <li><a href="../invest/transfer.html">债权转让</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="../account/account.html">账户管理</a>
+    </li>
+    <li class="sub">
+      <a href="../security/security.html">安全保障</a>
+    </li>
+    <li class="sub">
+      <a href="../about/company-intro.html">关于我们</a>
+      <ul>
+        <li><a href="../about/company-intro.html">公司介绍</a></li>
+        <li><a href="../about/product-intro.html">产品介绍</a></li>
+        <li><a href="../about/qualification.html">企业资质</a></li>
+        <li><a href="../about/contact-us.html">联系我们</a></li>
+      </ul>
+    </li>
+  </ul>
 </div>
 </div>
 
@@ -38,110 +67,118 @@
 <div class="con">
   <div class="mt30 pb20">
     
-    <div class="fl" style="width:366px;">
-      <h2 class="lh48 blue">车宜贷</h2>
-      <h4 class="lh36">申请条件：</h4>
-      <p class="ft14 lh24 loan-apply-con">申请限于重庆主城区车主（渝A、渝B车牌）。</p>
-      <table id="loan-table" class="loan-table-1" width="80%" cellpadding="0" cellspacing="0">
-        <caption><h4 class="lh36">提供材料：</h4></caption>
-        <tr>
-          <td>1</td>
-          <td>身份证（原件）</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>行驶证（原件）</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>保险单（原件）</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>钥 匙 （两把）</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>购车发票及完税证明</td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>汽  车/td>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td>违章清零</td>
-        </tr>
-        <tr>
-          <td>8</td>
-          <td>登记证</td>
-        </tr>
-      </table>
+    <div class="fl bor loan-item">
+      <h2 class="lh24 bg-blue">车宜贷</h2>
+      <div class="loan-item-inner">
+        <h4 class="lh36">申请条件：</h4>
+        <p class="ft14 lh24 loan-apply-con">申请限于重庆主城区车主（渝A、渝B车牌）。</p><br>
+        <table class="loan-table loan-table-1" width="100%" cellpadding="0" cellspacing="0">
+        <h4 class="lh36">提供材料：</h4>
+          <tr>
+            <td>1</td>
+            <td>身份证（原件）</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>行驶证（原件）</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>保险单（原件）</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>钥 匙 （两把）</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>购车发票及完税证明</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>汽  车</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>违章清零</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>登记证</td>
+          </tr>
+        </table>
+      </div>
     </div>
-    <div class="fl" style="width:367px;">
-      <h2 class="lh48 green">微商贷</h2>
-      <h4 class="lh36">申请条件：</h4>
-      <p class="ft14 lh24 loan-apply-con">18周岁以上中国公民;</p>
-      <p class="ft14 lh24 loan-apply-con">经营时间一年以上;</p>
-      <p class="ft14 lh24 loan-apply-con">申请限于法人代表。</p>
-      <table id="loan-table" class="loan-table-2" width="80%" cellpadding="0" cellspacing="0">
-        <caption><h4 class="lh36">提供材料：</h4></caption>
-        <tr>
-          <td>1</td>
-          <td>身份证</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>个人信用报告</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>经营证明</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>近三个月银行流水</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>营业执照、企业机构代码证等</td>
-        </tr>
-      </table>
+    <div class="fl bor loan-item">
+      <h2 class="lh24 bg-green">微商贷</h2>
+      <div class="loan-item-inner">
+        <h4 class="lh36">申请条件：</h4>
+        <p class="ft14 lh24 loan-apply-con">18周岁以上中国公民;</p>
+        <p class="ft14 lh24 loan-apply-con">经营时间一年以上;</p>
+        <p class="ft14 lh24 loan-apply-con">申请限于法人代表。</p><br>
+        <h4 class="lh36">提供材料：</h4>
+        <table class="loan-table loan-table-2" width="100%" cellpadding="0" cellspacing="0">
+          <tr>
+            <td>1</td>
+            <td>身份证</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>个人信用报告</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>经营证明</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>近三个月银行流水</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>营业执照、企业机构代码证等</td>
+          </tr>
+        </table>
+      </div>
     </div>
-    <div class="fr" style="width:367px;">
-      <h2 class="lh48 yellow">兴业贷</h2>
-      <h4 class="lh36">申请条件：</h4>
-      <p class="ft14 lh24 loan-apply-con">22周岁以上中国公民;</p>
-      <p class="ft14 lh24 loan-apply-con">经营时间一年以上;</p>
-      <p class="ft14 lh24 loan-apply-con">申请限于法人代表。</p>
-      <table id="loan-table" class="loan-table-3" width="80%" cellpadding="0" cellspacing="0">
-        <caption><h4 class="lh36">提供材料：</h4></caption>
-        <tr>
-          <td>1</td>
-          <td>身份证</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>个人信用报告</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>经营证明</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>近六个月银行流水</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>营业执照、企业机构代码证等</td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>质押物</td>
-        </tr>
-      </table>
+    <div class="fr bor loan-item">
+      <h2 class="lh24 bg-yellow">兴业贷</h2>
+      <div class="loan-item-inner">
+        <h4 class="lh36">申请条件：</h4>
+        <p class="ft14 lh24 loan-apply-con">22周岁以上中国公民;</p>
+        <p class="ft14 lh24 loan-apply-con">经营时间一年以上;</p>
+        <p class="ft14 lh24 loan-apply-con">申请限于法人代表。</p><br>
+        <h4 class="lh36">提供材料：</h4>
+        <table class="loan-table loan-table-3" width="100%" cellpadding="0" cellspacing="0">
+          <tr>
+            <td>1</td>
+            <td>身份证</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>个人信用报告</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>经营证明</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>近六个月银行流水</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>营业执照、企业机构代码证等</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>质押物</td>
+          </tr>
+        </table>
+      </div>
     </div>
+
+    <div class="clear-col"></div>
     
   </div>
 </div>
