--- a/account/login.html
+++ b/account/login.html
@@ -23,14 +23,43 @@
 <div class="top">
 <div class="w1100 mc">
   <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><a href="enter.html" class="topbtn">登录</a><a href="login.html" class="topbtn">注册</a><a href="#">帮助中心</a></div>
+  <div class="fr topr"><a href="../account/login.html" class="topbtn">登录</a><a href="../account/register.html" class="topbtn">注册</a><a href="../help/help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1100 mc">
   <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
-  <div class="nav"><a href="index.html">首页</a><a href="../loan/loan.html">我要借款</a><a href="../invest/invest.html">我要投资</a><a href="../account/account.html">账户管理</a><a href="../security/security.html">安全保障</a><a href="../about/company-intro.html">关于我们</a></div>
+  <ul class="nav">
+    <li>
+      <a href="../index.html" class="c900">首页</a>
+    </li>
+    <li>
+      <a href="../loan/loan.html">我要借款</a>
+    </li>
+    <li class="sub">
+      <a href="#">我要投资</a>
+      <ul>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="../account/account.html">账户管理</a>
+    </li>
+    <li class="sub">
+      <a href="../security/security.html">安全保障</a>
+    </li>
+    <li class="sub">
+      <a href="#">关于我们</a>
+      <ul>
+        <li><a href="../about/company-intro.html">公司介绍</a></li>
+        <li><a href="../about/product-intro.html">产品介绍</a></li>
+        <li><a href="../about/qualification.html">企业资质</a></li>
+        <li><a href="../about/contact-us.html">联系我们</a></li>
+      </ul>
+    </li>
+  </ul>
 </div>
 </div>
 
