--- a/invest/transfer.html
+++ b/invest/transfer.html
@@ -1,5 +1,180 @@
-﻿
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="keywords" content="川商贷">
+<meta http-equiv="description" content="川商贷">
+<title>债权转让-金仓贷</title>
+
+<link href="css/public.css" type="text/css" rel="stylesheet" />
+<link href="css/style.css" type="text/css" rel="stylesheet" />
+
+<!--[if IE 6]>
+<script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
+<script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
+<![endif]-->
+<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="js/base.js"></script>
+
+</head>
+
+<body>
+
+<div class="top">
+<div class="w1100 mc">
+  <div class="fl">欢迎使用川商贷！</div>
+  <div class="fr topr"><a href="enter.html" class="topbtn">登录</a><a href="login.html" class="topbtn">注册</a><a href="#">帮助中心</a></div>
+</div>
+</div>
+
+<div class="header">
+<div class="w1100 mc">
+  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+  <ul class="nav">
+    <li>
+      <a href="index.html" class="c900">首页</a>
+    </li>
+    <li>
+      <a href="loan.html">我要借款</a>
+    </li>
+    <li class="sub">
+      <a href="#">我要投资</a>
+      <ul>
+        <li><a href="">我要投资</a></li>
+        <li><a href="">散标投资</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="account.html">账户管理</a>
+    </li>
+    <li class="sub">
+      <a href="#">安全保障</a>
+      <ul>
+        <li><a href="">资金安全保障</a></li>
+        <li><a href="">项目风险保障</a></li>
+        <li><a href="">项目担保保障</a></li>
+        <li><a href="">风险准备金垫付</a></li>
+        <li><a href="">违约赔付有保障</a></li>
+      </ul>
+    </li>
+    <li class="sub">
+      <a href="#">关于我们</a>
+      <ul>
+        <li><a href="">公司介绍</a></li>
+        <li><a href="">产品介绍</a></li>
+        <li><a href="">企业资质</a></li>
+        <li><a href="">联系我们</a></li>
+      </ul>
+    </li>
+  </ul>
+</div>
+</div>
+
+  
+
+<div class="con">
+
+  <div class="shaixuan">
+    <div class="col-7">
+      <h4 class="lh30">筛选债权转让项目</h4>
+      <dl class="sxdl clearfix mt10"><dt>标的类型：</dt><dd class="clearfix"><a class="on">不限</a><a>信用认证标</a><a>实地认证标</a><a>机构担保标</a><a>智能理财标</a></dd></dl>
+      <dl class="sxdl clearfix mt10"><dt>剩余期限：</dt><dd class="clearfix"><a class="on">不限</a><a>6个月及以下</a><a>7-12个月</a><a>13-24个月</a><a>25个月及以上</a></dd></dl>
+      <dl class="sxdl clearfix mt10"><dt>认证等级：</dt><dd class="clearfix"><a class="on">不限</a><a>AA</a><a>A</a><a>B</a><a>C</a><a>D</a><a>E</a><a>HR</a></dd></dl>
+    </div>
+    <div class="col-3">
+      <h2>新手引导</h2>
+
+      <a href="#">什么是债权转让？</a>
+      <a href="#">债权的价值是如何计算的？</a>
+      <a href="#">债权的转让价格是如何确定的？</a>
+      <a href="#">债权转让说明书</a>
+    </div>
+    <div class="clear-col"></div>
+  </div>
+
+  <div class="row mt20 text-center">
+    <h3 class="col-xs-4 text-left"><span class="ft24">债权转让列表</span></h3>
+    <div class="col-xs-8">
+      <div class="row">
+        <div class="col-xs-4 col-border">
+          <dt>累计成交总金额</dt>
+          <dd class="ft18"><span class="value mr10">66894.04</span>万元</dd>
+        </div>
+        <div class="col-xs-4 col-border">
+          <dt>累计转让总笔数</dt>
+          <dd class="ft18"><span class="value mr10">895768</span>笔</dd>
+        </div>
+        <div class="col-xs-4">
+          <dt>单笔转让平均耗时</dt>
+          <dd class="ft18"><span class="value mr10">7分43秒</span></dd>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
+  <tr>
+    <th scope="col" width="20%">借款标题</th>
+    <th scope="col">信用等级</th>
+    <th scope="col">年利率</th>
+    <th scope="col">剩余期限</th>
+    <th scope="col">每份价值</th>
+    <th scope="col">剩余份额</th>
+    <th scope="col">转让系数</th>
+    <th scope="col">转出价格</th>
+    <th scope="col"></th>
+  </tr>
+
+  <tr class="ft12">
+    <td scope="col" width="20%">借款标题</td>
+    <td scope="col"><span class="rank">A</span></td>
+    <td scope="col"><span class="ft18">11.00</span>%</td>
+    <td scope="col"><span class="ft18">15</span>个月</td>
+    <td scope="col"><span class="ft18">42.24</span>元</td>
+    <td scope="col"><span class="ft18">1</span>份</td>
+    <td scope="col"><span class="ft18">100</span>%</td>
+    <td scope="col"><span class="ft18">42.24</span>元/份</td>
+    <td scope="col"><a class="tzbtn">购买</a></td>
+  </tr><tr class="ft12">
+    <td scope="col" width="20%">借款标题</td>
+    <td scope="col"><span class="rank">A</span></td>
+    <td scope="col"><span class="ft18">11.00</span>%</td>
+    <td scope="col"><span class="ft18">15</span>个月</td>
+    <td scope="col"><span class="ft18">42.24</span>元</td>
+    <td scope="col"><span class="ft18">1</span>份</td>
+    <td scope="col"><span class="ft18">100</span>%</td>
+    <td scope="col"><span class="ft18">42.24</span>元/份</td>
+    <td scope="col"><a class="tzbtn">购买</a></td>
+  </tr><tr class="ft12">
+    <td scope="col" width="20%">借款标题</td>
+    <td scope="col"><span class="rank">A</span></td>
+    <td scope="col"><span class="ft18">11.00</span>%</td>
+    <td scope="col"><span class="ft18">15</span>个月</td>
+    <td scope="col"><span class="ft18">42.24</span>元</td>
+    <td scope="col"><span class="ft18">1</span>份</td>
+    <td scope="col"><span class="ft18">100</span>%</td>
+    <td scope="col"><span class="ft18">42.24</span>元/份</td>
+    <td scope="col"><a class="tzbtn">购买</a></td>
+  </tr>
+</table>
+  
+  
+  <div class="pages"><a href="#">首页</a><a href="#">上一页</a><a href="#"  class="now">1</a><a href="#">2</a><a href="#">3</a><a href="#">上一页</a><a href="#">下一页</a><a href="#">尾页</a><span>共3页</span></div>
+  
+
+</div>
+
+
+
+<div class="footer">
+  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+  <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
+</div>
+
+</body>
+</html>
+=======
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
