撤文件夹后，路径修改。

--- a/account.html
+++ b/account.html
@@ -6,15 +6,15 @@
 <meta http-equiv="description" content="川商贷">
 <title>账户管理-金仓贷</title>
 
-<link href="../css/public.css" type="text/css" rel="stylesheet" />
-<link href="../css/style.css" type="text/css" rel="stylesheet" />
+<link href="css/public.css" type="text/css" rel="stylesheet" />
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 
 <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="../js/base.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="js/base.js"></script>
 
 </head>
 
@@ -29,41 +29,34 @@
 
 <div class="header">
 <div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
+  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
-      <a href="index.html" class="c900">首页</a>
+      <a href="index.html">首页</a>
     </li>
     <li>
       <a href="loan.html">我要借款</a>
     </li>
     <li class="sub">
-      <a href="#">我要投资</a>
+      <a href="invest.html">我要投资</a>
       <ul>
-        <li><a href="">我要投资</a></li>
-        <li><a href="">散标投资</a></li>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
-      <a href="account.html">账户管理</a>
+      <a href="account.html" class="c900">账户管理</a>
+    </li>
+    <li>
+      <a href="security.html">安全保障</a>
     </li>
     <li class="sub">
-      <a href="#">安全保障</a>
+      <a href="company-intro.html">关于我们</a>
       <ul>
-        <li><a href="">资金安全保障</a></li>
-        <li><a href="">项目风险保障</a></li>
-        <li><a href="">项目担保保障</a></li>
-        <li><a href="">风险准备金垫付</a></li>
-        <li><a href="">违约赔付有保障</a></li>
-      </ul>
-    </li>
-    <li class="sub">
-      <a href="#">关于我们</a>
-      <ul>
-        <li><a href="">公司介绍</a></li>
-        <li><a href="">产品介绍</a></li>
-        <li><a href="">企业资质</a></li>
-        <li><a href="">联系我们</a></li>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
@@ -71,9 +64,9 @@
 </div>
 
 
-<div class="con bor clearfix">
+<div class="con clearfix">
 
-  <div id="left">
+  <div id="left" class="bor">
     <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
     <ul id="subMenu" class="left_ul">
       <li><a href="account.html" class="c900">我的账户</a><i class="png"></i>
@@ -95,7 +88,7 @@
     </ul>
   </div> 
   
-  <div id="right">
+  <div id="right" class="bor">
   <div class="p40 pt20">
   
     <div class="clearfix lh48" style=" border-bottom:2px solid #ccc;"><div class="fl ft14">您好，月亮 ( 编号：yjK11785 )  <a href="#" class="ml20 c08c">账户资料</a></div><div class="fr c999">上次登录时间：2014-07-14 11:38:48</div></div>
