--- a/invest.html
+++ b/invest.html
@@ -6,15 +6,15 @@
 <meta http-equiv="description" content="川商贷">
 <title>散标投资-金仓贷</title>
 
-<link href="../css/public.css" type="text/css" rel="stylesheet" />
-<link href="../css/style.css" type="text/css" rel="stylesheet" />
+<link href="css/public.css" type="text/css" rel="stylesheet" />
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 
 <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="../js/base.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="js/base.js"></script>
 
 </head>
 
@@ -23,40 +23,40 @@
 <div class="top">
 <div class="w1100 mc">
   <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><a href="../account/login.html" class="topbtn">登录</a><a href="../account/register.html" class="topbtn">注册</a><a href="../help/help.html">帮助中心</a></div>
+  <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
+  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
-      <a href="../index.html">首页</a>
+      <a href="index.html">首页</a>
     </li>
     <li>
-      <a href="../loan/loan.html">我要借款</a>
+      <a href="loan.html">我要借款</a>
     </li>
     <li class="sub">
-      <a href="../invest/invest.html" class="c900">我要投资</a>
+      <a href="invest.html" class="c900">我要投资</a>
       <ul>
-        <li><a href="../invest/invest.html">散标投资</a></li>
-        <li><a href="../invest/transfer.html">债权转让</a></li>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
-      <a href="../account/account.html">账户管理</a>
+      <a href="account.html">账户管理</a>
+    </li>
+    <li>
+      <a href="security.html">安全保障</a>
     </li>
     <li class="sub">
-      <a href="../security/security.html">安全保障</a>
-    </li>
-    <li class="sub">
-      <a href="#">关于我们</a>
+      <a href="company-intro.html">关于我们</a>
       <ul>
-        <li><a href="../about/company-intro.html">公司介绍</a></li>
-        <li><a href="../about/product-intro.html">产品介绍</a></li>
-        <li><a href="../about/qualification.html">企业资质</a></li>
-        <li><a href="../about/contact-us.html">联系我们</a></li>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
@@ -85,7 +85,7 @@
     <th scope="col" width="12%">操作</th>
   </tr>
   <tr>
-    <td class="xmm"><img src="../images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
+    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">mini coupe club</a> </td>
     <td><span class="y-rate">9.5</span>%</td>
     <td>100万</td>
     <td>60%</td>
@@ -94,7 +94,7 @@
     <td><a class="tzbtn">投标</a></td>
   </tr>
   <tr>
-    <td class="xmm"><img src="../images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
+    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
     <td><span class="y-rate">9.5</span>%</td>
     <td>100万</td>
     <td>60%</td>
@@ -103,7 +103,7 @@
     <td><a class="tzbtn">投标</a></td>
   </tr>
   <tr>
-    <td class="xmm"><img src="../images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
+    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
     <td><span class="y-rate">99.5</span>%</td>
     <td>100万</td>
     <td>60%</td>
@@ -112,7 +112,7 @@
     <td><a class="tzbtn">投标</a></td>
   </tr>
   <tr>
-    <td class="xmm"><img src="../images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
+    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
     <td><span class="y-rate">99.5</span>%</td>
     <td>100万</td>
     <td>100%</td>
