--- a/product-intro.html
+++ b/product-intro.html
@@ -6,15 +6,15 @@
 <meta http-equiv="description" content="川商贷">
 <title>产品介绍-金仓贷</title>
 
-<link href="../css/public.css" type="text/css" rel="stylesheet" />
-<link href="../css/style.css" type="text/css" rel="stylesheet" />
+<link href="css/public.css" type="text/css" rel="stylesheet" />
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 
 <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="../js/base.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="js/base.js"></script>
 
 </head>
 
@@ -23,47 +23,40 @@
 <div class="top">
 <div class="w1100 mc">
   <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><a href="enter.html" class="topbtn">登录</a><a href="login.html" class="topbtn">注册</a><a href="#">帮助中心</a></div>
+  <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
+  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
-      <a href="index.html" class="c900">首页</a>
+      <a href="index.html">首页</a>
     </li>
     <li>
       <a href="loan.html">我要借款</a>
     </li>
     <li class="sub">
-      <a href="#">我要投资</a>
+      <a href="invest.html">我要投资</a>
       <ul>
-        <li><a href="">我要投资</a></li>
-        <li><a href="">散标投资</a></li>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
       <a href="account.html">账户管理</a>
     </li>
-    <li class="sub">
-      <a href="#">安全保障</a>
-      <ul>
-        <li><a href="">资金安全保障</a></li>
-        <li><a href="">项目风险保障</a></li>
-        <li><a href="">项目担保保障</a></li>
-        <li><a href="">风险准备金垫付</a></li>
-        <li><a href="">违约赔付有保障</a></li>
-      </ul>
+    <li>
+      <a href="security.html">安全保障</a>
     </li>
     <li class="sub">
-      <a href="#">关于我们</a>
+      <a href="company-intro.html" class="c900">关于我们</a>
       <ul>
-        <li><a href="">公司介绍</a></li>
-        <li><a href="">产品介绍</a></li>
-        <li><a href="">企业资质</a></li>
-        <li><a href="">联系我们</a></li>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
@@ -71,9 +64,9 @@
 </div>
 
 
-<div class="con bor about-con clearfix">
+<div class="con about-con clearfix">
 
-  <div id="left">
+  <div id="left" class="bor">
     <h2 class="mt20 pl20 borb2 lh48">关于我们</h2>
     <ul class="left_ul">
       <li><a href="company-intro.html">公司介绍</a></li>
@@ -83,7 +76,7 @@
     </ul>
   </div> 
   
-  <div id="right">
+  <div id="right" class="bor">
   <div class="p40 pt20">
   
     <h2 class="title"><span>产品介绍</span></h2>
