--- a/transfer.html
+++ b/transfer.html
@@ -6,15 +6,15 @@
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
 <title>债权转让-金仓贷</title>
-<link href="../css/public.css" type="text/css" rel="stylesheet" />
-<link href="../css/style.css" type="text/css" rel="stylesheet" />
+<link href="css/public.css" type="text/css" rel="stylesheet" />
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 
 <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="../js/base.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="js/base.js"></script>
 
 </head>
 
@@ -23,14 +23,43 @@
 <div class="top">
 <div class="w1100 mc">
   <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><a href="../account/login.html" class="topbtn">登录</a><a href="../account/register.html" class="topbtn">注册</a><a href="../help/help.html">帮助中心</a></div>
+  <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
-  <div class="nav"><a href="index.html">首页</a><a href="../loan/loan.html">我要借款</a><a href="../invest/invest.html" class="c900">我要投资</a><a href="../account/account.html">账户管理</a><a href="../security/security.html">安全保障</a><a href="../about/company-intro.html">关于我们</a></div>
+  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+  <ul class="nav">
+    <li>
+      <a href="index.html">首页</a>
+    </li>
+    <li>
+      <a href="loan.html">我要借款</a>
+    </li>
+    <li class="sub">
+      <a href="invest.html" class="c900">我要投资</a>
+      <ul>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="account.html">账户管理</a>
+    </li>
+    <li>
+      <a href="security.html">安全保障</a>
+    </li>
+    <li class="sub">
+      <a href="company-intro.html">关于我们</a>
+      <ul>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
+      </ul>
+    </li>
+  </ul>
 </div>
 </div>
 
@@ -56,72 +85,74 @@
     <div class="clear-col"></div>
   </div>
 
-  <div class="row mt20 text-center">
-    <h3 class="col-xs-4 text-left"><span class="ft24">债权转让列表</span></h3>
-    <div class="col-xs-8">
-      <div class="row">
-        <div class="col-xs-4 col-border">
-          <dt>累计成交总金额</dt>
-          <dd class="ft18"><span class="value mr10">66894.04</span>万元</dd>
-        </div>
-        <div class="col-xs-4 col-border">
-          <dt>累计转让总笔数</dt>
-          <dd class="ft18"><span class="value mr10">895768</span>笔</dd>
-        </div>
-        <div class="col-xs-4">
-          <dt>单笔转让平均耗时</dt>
-          <dd class="ft18"><span class="value mr10">7分43秒</span></dd>
+  <div class="transfer-list bor mt20">
+    <div class="row mt20 text-center">
+      <h3 class="col-xs-4 text-left"><span class="ft24">债权转让列表</span></h3>
+      <div class="col-xs-8">
+        <div class="row">
+          <div class="col-xs-4 col-border">
+            <dt>累计成交总金额</dt>
+            <dd class="ft18"><span class="value mr10">66894.04</span>万元</dd>
+          </div>
+          <div class="col-xs-4 col-border">
+            <dt>累计转让总笔数</dt>
+            <dd class="ft18"><span class="value mr10">895768</span>笔</dd>
+          </div>
+          <div class="col-xs-4">
+            <dt>单笔转让平均耗时</dt>
+            <dd class="ft18"><span class="value mr10">7分43秒</span></dd>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+
 
   <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
-  <tr>
-    <th scope="col" width="20%">借款标题</th>
-    <th scope="col">信用等级</th>
-    <th scope="col">年利率</th>
-    <th scope="col">剩余期限</th>
-    <th scope="col">每份价值</th>
-    <th scope="col">剩余份额</th>
-    <th scope="col">转让系数</th>
-    <th scope="col">转出价格</th>
-    <th scope="col"></th>
-  </tr>
+    <tr>
+      <th scope="col" width="20%">借款标题</th>
+      <th scope="col">信用等级</th>
+      <th scope="col">年利率</th>
+      <th scope="col">剩余期限</th>
+      <th scope="col">每份价值</th>
+      <th scope="col">剩余份额</th>
+      <th scope="col">转让系数</th>
+      <th scope="col">转出价格</th>
+      <th scope="col"></th>
+    </tr>
 
-  <tr class="ft12">
-    <td scope="col" width="20%">借款标题</td>
-    <td scope="col"><span class="rank">A</span></td>
-    <td scope="col"><span class="ft18">11.00</span>%</td>
-    <td scope="col"><span class="ft18">15</span>个月</td>
-    <td scope="col"><span class="ft18">42.24</span>元</td>
-    <td scope="col"><span class="ft18">1</span>份</td>
-    <td scope="col"><span class="ft18">100</span>%</td>
-    <td scope="col"><span class="ft18">42.24</span>元/份</td>
-    <td scope="col"><a class="tzbtn">购买</a></td>
-  </tr><tr class="ft12">
-    <td scope="col" width="20%">借款标题</td>
-    <td scope="col"><span class="rank">A</span></td>
-    <td scope="col"><span class="ft18">11.00</span>%</td>
-    <td scope="col"><span class="ft18">15</span>个月</td>
-    <td scope="col"><span class="ft18">42.24</span>元</td>
-    <td scope="col"><span class="ft18">1</span>份</td>
-    <td scope="col"><span class="ft18">100</span>%</td>
-    <td scope="col"><span class="ft18">42.24</span>元/份</td>
-    <td scope="col"><a class="tzbtn">购买</a></td>
-  </tr><tr class="ft12">
-    <td scope="col" width="20%">借款标题</td>
-    <td scope="col"><span class="rank">A</span></td>
-    <td scope="col"><span class="ft18">11.00</span>%</td>
-    <td scope="col"><span class="ft18">15</span>个月</td>
-    <td scope="col"><span class="ft18">42.24</span>元</td>
-    <td scope="col"><span class="ft18">1</span>份</td>
-    <td scope="col"><span class="ft18">100</span>%</td>
-    <td scope="col"><span class="ft18">42.24</span>元/份</td>
-    <td scope="col"><a class="tzbtn">购买</a></td>
-  </tr>
-</table>
-  
+    <tr class="ft12">
+      <td scope="col" width="20%">借款标题</td>
+      <td scope="col"><span class="rank">A</span></td>
+      <td scope="col"><span class="ft18">11.00</span>%</td>
+      <td scope="col"><span class="ft18">15</span>个月</td>
+      <td scope="col"><span class="ft18">42.24</span>元</td>
+      <td scope="col"><span class="ft18">1</span>份</td>
+      <td scope="col"><span class="ft18">100</span>%</td>
+      <td scope="col"><span class="ft18">42.24</span>元/份</td>
+      <td scope="col"><a class="tzbtn">购买</a></td>
+    </tr><tr class="ft12">
+      <td scope="col" width="20%">借款标题</td>
+      <td scope="col"><span class="rank">A</span></td>
+      <td scope="col"><span class="ft18">11.00</span>%</td>
+      <td scope="col"><span class="ft18">15</span>个月</td>
+      <td scope="col"><span class="ft18">42.24</span>元</td>
+      <td scope="col"><span class="ft18">1</span>份</td>
+      <td scope="col"><span class="ft18">100</span>%</td>
+      <td scope="col"><span class="ft18">42.24</span>元/份</td>
+      <td scope="col"><a class="tzbtn">购买</a></td>
+    </tr><tr class="ft12">
+      <td scope="col" width="20%">借款标题</td>
+      <td scope="col"><span class="rank">A</span></td>
+      <td scope="col"><span class="ft18">11.00</span>%</td>
+      <td scope="col"><span class="ft18">15</span>个月</td>
+      <td scope="col"><span class="ft18">42.24</span>元</td>
+      <td scope="col"><span class="ft18">1</span>份</td>
+      <td scope="col"><span class="ft18">100</span>%</td>
+      <td scope="col"><span class="ft18">42.24</span>元/份</td>
+      <td scope="col"><a class="tzbtn">购买</a></td>
+    </tr>
+  </table>
+</div> 
   
   <div class="pages"><a href="#">首页</a><a href="#">上一页</a><a href="#"  class="now">1</a><a href="#">2</a><a href="#">3</a><a href="#">上一页</a><a href="#">下一页</a><a href="#">尾页</a><span>共3页</span></div>
   
