many many changes

--- a/account-rzxmsq.html
+++ b/account-rzxmsq.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
-<title>川商贷</title>
+<title>借款项目申请-川商贷</title>
 
 <link href="css/public.css" type="text/css" rel="stylesheet" />
 <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -28,7 +28,7 @@
 </div>
 
 <div class="header">
-<div class="w1000 mc">
+<div class="w1100 mc">
   <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
@@ -84,9 +84,9 @@
           <li><a href="#">账户资料</a></li>
         </ol>
       </li>
-      <li><a href="account-rzxmgl.html">融资项目管理</a>
+      <li><a href="account-rzxmgl.html">借款项目管理</a>
         <ol class="pb20 pt5">
-          <li><a href="account-rzxmsq.html" class="c900">融资项目申请</a><i class="png"></i></li>
+          <li><a href="account-rzxmsq.html" class="c900">借款项目申请</a><i class="png"></i></li>
         </ol>
       </li>
       <li><a href="account-jycx.html">交易查询</a></li>
