--- a/us-news.html
+++ b/us-news.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
-<title>川商贷</title>
+<title>新闻公告详情-金仓贷</title>
 
 <link href="css/public.css" type="text/css" rel="stylesheet" />
 <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -21,14 +21,14 @@
 <body>
 
 <div class="top">
-<div class="w1000 mc">
+<div class="w1100 mc">
   <div class="fl">欢迎使用川商贷！</div>
   <div class="fr topr"><a href="enter.html" class="topbtn">登录</a><a href="login.html" class="topbtn">注册</a><a href="#">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
-<div class="w1000 mc">
+<div class="w1100 mc">
   <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
@@ -38,32 +38,25 @@
       <a href="loan.html">我要借款</a>
     </li>
     <li class="sub">
-      <a href="#">我要投资</a>
+      <a href="invest.html">我要投资</a>
       <ul>
-        <li><a href="">我要投资</a></li>
-        <li><a href="">散标投资</a></li>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
       <a href="account.html">账户管理</a>
     </li>
-    <li class="sub">
-      <a href="#">安全保障</a>
-      <ul>
-        <li><a href="">资金安全保障</a></li>
-        <li><a href="">项目风险保障</a></li>
-        <li><a href="">项目担保保障</a></li>
-        <li><a href="">风险准备金垫付</a></li>
-        <li><a href="">违约赔付有保障</a></li>
-      </ul>
+    <li>
+      <a href="security.html">安全保障</a>
     </li>
     <li class="sub">
-      <a href="#">关于我们</a>
+      <a href="company-intro.html">关于我们</a>
       <ul>
-        <li><a href="">公司介绍</a></li>
-        <li><a href="">产品介绍</a></li>
-        <li><a href="">企业资质</a></li>
-        <li><a href="">联系我们</a></li>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
@@ -73,17 +66,7 @@
 
 <div class="con bor clearfix">
 
-  <div id="left">
-    <h2 class="mt20 pl20 borb2 lh48">关于我们</h2>
-    <ul class="left_ul">
-      <li><a href="news_list.html" class="c900">新闻公告</a><i class="png"></i></li>
-      <li><a href="#">平台简介</a></li>
-      <li><a href="#">联系我们</a></li>
-      <li><a href="#">安全保障</a></li>
-    </ul>
-  </div> 
-  
-  <div id="right">
+
   <div class="p40 pt20">
   
     <h2 class="title"><span>新闻公告</span></h2>
@@ -98,7 +81,6 @@
     </div>
     
   </div>
-  </div>
   
 
 </div>
@@ -106,8 +88,16 @@
 
 
 <div class="footer">
-  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-  <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
+  <div style="width:1000px; margin:0 auto">
+    <div style="width:80%" class="tal fl">
+      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+    </div>
+    <div style="width:20%" class="tar fl">
+      <img src="images/test-qrcode.jpg" style="width:100px;">
+    </div>
+    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+    <div class="clearfix"></div>
+  </div>
 </div>
 
 </body>
