--- a/account-jycx.html
+++ b/account-jycx.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
-<title>川商贷</title>
+<title>交易查询-金仓贷</title>
 
 <link href="css/public.css" type="text/css" rel="stylesheet" />
 <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -21,49 +21,42 @@
 <body>
 
 <div class="top">
-<div class="w1000 mc">
-  <div class="fl">欢迎使用川商贷！</div>
+<div class="w1100 mc">
+  <div class="fl">欢迎使用金仓贷！</div>
   <div class="fr topr"><span>您好，月亮 <a href="#">[安全退出]</a></span><a href="#" class="borl pl20">您有（1）条未读消息</a><a href="#" class="borl pl20">我的账户</a><a href="#" class="borl pl20">充值</a></div>
 </div>
 </div>
 
 <div class="header">
-<div class="w1000 mc">
+<div class="w1100 mc">
   <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
-      <a href="index.html" class="c900">首页</a>
+      <a href="index.html">首页</a>
     </li>
     <li>
       <a href="loan.html">我要借款</a>
     </li>
     <li class="sub">
-      <a href="#">我要投资</a>
+      <a href="invest.html">我要投资</a>
       <ul>
-        <li><a href="">我要投资</a></li>
-        <li><a href="">散标投资</a></li>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
-      <a href="account.html">账户管理</a>
+      <a href="account.html" class="c900">账户管理</a>
+    </li>
+    <li>
+      <a href="security.html">安全保障</a>
     </li>
     <li class="sub">
-      <a href="#">安全保障</a>
+      <a href="company-intro.html">关于我们</a>
       <ul>
-        <li><a href="">资金安全保障</a></li>
-        <li><a href="">项目风险保障</a></li>
-        <li><a href="">项目担保保障</a></li>
-        <li><a href="">风险准备金垫付</a></li>
-        <li><a href="">违约赔付有保障</a></li>
-      </ul>
-    </li>
-    <li class="sub">
-      <a href="#">关于我们</a>
-      <ul>
-        <li><a href="">公司介绍</a></li>
-        <li><a href="">产品介绍</a></li>
-        <li><a href="">企业资质</a></li>
-        <li><a href="">联系我们</a></li>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
@@ -71,9 +64,9 @@
 </div>
 
 
-<div class="con bor clearfix">
+<div class="con clearfix">
 
-  <div id="left">
+  <div id="left" class="bor">
     <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
     <ul id="subMenu" class="left_ul">
       <li><a href="account.html">我的账户</a>
@@ -91,7 +84,7 @@
     </ul>
   </div> 
   
-  <div id="right">
+  <div id="right" class="bor">
   <div class="p40 pt20">
   
     <ul class="tradetab">
@@ -203,8 +196,16 @@
 
 
 <div class="footer">
-  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-  <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
+  <div style="width:1000px; margin:0 auto">
+    <div style="width:80%" class="tal fl">
+      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+    </div>
+    <div style="width:20%" class="tar fl">
+      <img src="images/test-qrcode.jpg" style="width:100px;">
+    </div>
+    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+    <div class="clearfix"></div>
+  </div>
 </div>
 
 </body>
