--- a/account-safe.html
+++ b/account-safe.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
-<title>川商贷</title>
+<title>安全中心-金仓贷</title>
 
 <link href="css/public.css" type="text/css" rel="stylesheet" />
 <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -21,49 +21,43 @@
 <body>
 
 <div class="top">
-<div class="w1000 mc">
-  <div class="fl">欢迎使用川商贷！</div>
+<div class="w1100 mc">
+  <div class="fl">欢迎使用金仓贷！</div>
   <div class="fr topr"><span>您好，月亮 <a href="#">[安全退出]</a></span><a href="#" class="borl pl20">您有（1）条未读消息</a><a href="#" class="borl pl20">我的账户</a><a href="#" class="borl pl20">充值</a></div>
 </div>
 </div>
 
 <div class="header">
-<div class="w1000 mc">
+<div class="w1100 mc">
+  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
-      <a href="index.html" class="c900">首页</a>
+      <a href="index.html">首页</a>
     </li>
     <li>
       <a href="loan.html">我要借款</a>
     </li>
     <li class="sub">
-      <a href="#">我要投资</a>
+      <a href="invest.html">我要投资</a>
       <ul>
-        <li><a href="">我要投资</a></li>
-        <li><a href="">散标投资</a></li>
+        <li><a href="invest.html">散标投资</a></li>
+        <li><a href="transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
-      <a href="account.html">账户管理</a>
+      <a href="account.html" class="c900">账户管理</a>
+    </li>
+    <li>
+      <a href="security.html">安全保障</a>
     </li>
     <li class="sub">
-      <a href="#">安全保障</a>
+      <a href="company-intro.html">关于我们</a>
       <ul>
-        <li><a href="">资金安全保障</a></li>
-        <li><a href="">项目风险保障</a></li>
-        <li><a href="">项目担保保障</a></li>
-        <li><a href="">风险准备金垫付</a></li>
-        <li><a href="">违约赔付有保障</a></li>
-      </ul>
-    </li>
-    <li class="sub">
-      <a href="#">关于我们</a>
-      <ul>
-        <li><a href="">公司介绍</a></li>
-        <li><a href="">产品介绍</a></li>
-        <li><a href="">企业资质</a></li>
-        <li><a href="">联系我们</a></li>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
