--- a/index.html
+++ b/index.html
@@ -157,8 +157,16 @@
 
 
 <div class="footer">
-  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-  <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
+  <div style="width:1000px; margin:0 auto">
+    <div style="width:80%" class="tal fl">
+      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+    </div>
+    <div style="width:20%" class="tar fl">
+      <img src="images/test-qrcode.jpg" style="width:100px;">
+    </div>
+    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+    <div class="clearfix"></div>
+  </div>
 </div>
 
 </body>
