--- a/login.html
+++ b/login.html
@@ -6,15 +6,15 @@
 <meta http-equiv="description" content="川商贷">
 <title>会员登录-金仓贷</title>
 
-<link href="../css/public.css" type="text/css" rel="stylesheet" />
-<link href="../css/style.css" type="text/css" rel="stylesheet" />
+<link href="css/public.css" type="text/css" rel="stylesheet" />
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 
 <!--[if IE 6]>
 <script type="text/javascript" src="js/DD_belatedPNG.js" ></script>
 <script type="text/javascript">   DD_belatedPNG.fix('.png,.logo');   </script>
 <![endif]-->
-<script type="text/javascript" src="../js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="../js/base.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="js/base.js"></script>
 
 </head>
 
@@ -23,40 +23,40 @@
 <div class="top">
 <div class="w1100 mc">
   <div class="fl">欢迎使用金仓贷！</div>
-  <div class="fr topr"><a href="../account/login.html" class="topbtn">登录</a><a href="../account/register.html" class="topbtn">注册</a><a href="../help/help.html">帮助中心</a></div>
+  <div class="fr topr"><a href="login.html" class="topbtn">登录</a><a href="register.html" class="topbtn">注册</a><a href="help.html">帮助中心</a></div>
 </div>
 </div>
 
 <div class="header">
 <div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="../images/logo.png" /></a>
+  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
   <ul class="nav">
     <li>
-      <a href="../index.html" class="c900">首页</a>
+      <a href="index.html">首页</a>
     </li>
     <li>
-      <a href="../loan/loan.html">我要借款</a>
+      <a href="loan.html">我要借款</a>
     </li>
     <li class="sub">
-      <a href="#">我要投资</a>
+      <a href="invest.html">我要投资</a>
       <ul>
         <li><a href="invest.html">散标投资</a></li>
         <li><a href="transfer.html">债权转让</a></li>
       </ul>
     </li>
     <li>
-      <a href="../account/account.html">账户管理</a>
+      <a href="account.html">账户管理</a>
+    </li>
+    <li>
+      <a href="security.html">安全保障</a>
     </li>
     <li class="sub">
-      <a href="../security/security.html">安全保障</a>
-    </li>
-    <li class="sub">
-      <a href="#">关于我们</a>
+      <a href="company-intro.html" class="c900">关于我们</a>
       <ul>
-        <li><a href="../about/company-intro.html">公司介绍</a></li>
-        <li><a href="../about/product-intro.html">产品介绍</a></li>
-        <li><a href="../about/qualification.html">企业资质</a></li>
-        <li><a href="../about/contact-us.html">联系我们</a></li>
+        <li><a href="company-intro.html">公司介绍</a></li>
+        <li><a href="product-intro.html">产品介绍</a></li>
+        <li><a href="qualification.html">企业资质</a></li>
+        <li><a href="contact-us.html">联系我们</a></li>
       </ul>
     </li>
   </ul>
@@ -97,8 +97,16 @@
 
 
 <div class="footer">
-  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-  <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
+  <div style="width:1000px; margin:0 auto">
+    <div style="width:80%" class="tal fl">
+      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+    </div>
+    <div style="width:20%" class="tar fl">
+      <img src="images/test-qrcode.jpg" style="width:100px;">
+    </div>
+    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+    <div class="clearfix"></div>
+  </div>
 </div>
 
 </body>
