--- a/register-select.html
+++ b/register-select.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="川商贷">
 <meta http-equiv="description" content="川商贷">
-<title>川商贷</title>
+<title>注册方式选择-金仓贷</title>
 
 <link href="css/public.css" type="text/css" rel="stylesheet" />
 <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -25,9 +25,9 @@
 </div>
 
 <div class="header">
-<div class="w1000 mc">
+<div class="w1100 mc">
   <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <h1 class="fl c999 lh36" style=" margin-left:30px; padding-left:20px; margin-top:25px; border-left:1px solid #d8d8d8">注册</h1>
+  <h1 class="fl c999 lh36" style=" margin-left:120px; padding-left:20px; margin-top:15px; border-left:1px solid #d8d8d8">注册</h1>
 </div>
 </div>
 
@@ -54,8 +54,16 @@
 
 
 <div class="footer">
-  <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
-  <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
+  <div style="width:1000px; margin:0 auto">
+    <div style="width:80%" class="tal fl">
+      <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+    </div>
+    <div style="width:20%" class="tar fl">
+      <img src="images/test-qrcode.jpg" style="width:100px;">
+    </div>
+    <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+    <div class="clearfix"></div>
+  </div>
 </div>
 
 </body>
